add jwt authentitcation middleware
